<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P2P Money Transfer</string>
    <string name="action_settings">Settings</string>
    <string name="package_name">hk.edu.polyu.moneytransfer</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="navigation_drawer_items_array">
        <item>Profile</item>
        <item>Contact List</item>
        <item>Transfer Money</item>
        <item>History</item>
        <item>Sign Out</item>
    </string-array>
    
    <string name="title_profile">Profile</string>
    <string name="title_contact_list">Contact List</string>
    <string name="title_transfer_money">Transfer Money</string>
    <string name="title_history">History</string>
    <string name="title_sign_out">Sign Out</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">Money Transfer</string>
    <string name="title_activity_register">Register</string>
    
    <string name="login_page_user_name_placeholder">User Name</string>
    <string name="login_page_login_button">Login</string>
    <string name="login_page_email_placeholder">Email</string>
    <string name="login_page_phone_placeholder">Mobile Phone</string>
    <string name="login_page_register_button">Register</string>
    <string name="login_page_remember_me">Remember me on this device</string>
    
    <string name="register_page_user_name_placeholder">User Name</string>
    <string name="register_page_email_placeholder">Email</string>
    <string name="register_page_phone_placeholder">Mobile Phone</string>
    <string name="register_page_bank_account_placeholder">Bank Account No.</string>
    <string name="register_page_register_button">Register</string>
    
    <string name="profile_page_user_name_placeholder">User Name</string>
    <string name="profile_page_email_placeholder">Email</string>
    <string name="profile_page_phone_placeholder">Mobile Phone</string>
    <string name="profile_page_bank_account_placeholder">Bank Account No.</string>
    <string name="profile_page_apply_button">Apply</string>
    
    <string name="contact_page_search">Select from address book</string>
    
    <string name="money_transfer_page_amount">Amount</string>
    <string name="money_transfer_page_currency">Currency</string>
    <string name="money_transfer_page_friend">P2P Contact List</string>
    <string name="money_transfer_page_message">Message to Recipient</string>
    <string name="money_transfer_page_message_placeholder">This is the money I owe you</string>
    <string name="money_transfer_page_submit_button">Confirm Transaction</string>

    <string name="p2p_address_book">P2pContacts</string>
    <string name="p2p_express_logon">P2pLogon</string>
<<<<<<< HEAD
=======
    <string name="p2p_cached_transaction">P2pCachedTx</string>
>>>>>>> dev
    
    <string name="gcm_defaultSenderId">578005844236</string> <!-- Jeffrey sender ID -->
    
    <string name="webservice_protocol">http</string>
<<<<<<< HEAD
    <string name="webservice_url">ec2-52-10-73-179.us-west-2.compute.amazonaws.com</string>
=======
    <string name="webservice_url">ec2-52-10-73-179.us-west-2.compute.amazonaws.com</string> 
>>>>>>> dev
    <!-- <string name="webservice_url">192.168.0.103</string> -->
    <string name="webservice_port">8080</string>
    <string name="webservice_test">P2pWebServices/rest/hello</string>
    <string name="webservice_create_user">P2pWebServices/rest/createUser</string>
    <string name="webservice_get_user">P2pWebServices/rest/getUser</string>
    <string name="webservice_send_money">P2pWebServices/rest/sendMoney</string>
</resources>