<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_page_user_name_placeholder">

        <requestFocus />
    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/editTextMobilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_page_phone_placeholder" 
        android:inputType="phone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
            <Button
		        android:id="@+id/buttonlogin"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:text="@string/login_page_login_button" />
            <CheckBox
                android:id="@+id/checkBoxRememberLogin"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/login_page_remember_me" />
    </LinearLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp" />
    
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login_page_register_button" />
    
</LinearLayout>
